--- a/res/layout/save.xml
+++ b/res/layout/save.xml
@@ -4,19 +4,22 @@
     android:id="@+id/save"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#000000"
     android:orientation="vertical" >
 
     <WebView
         android:id="@+id/saveData"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
-        android:layout_weight="50" />
+        android:layout_weight="50"
+        android:background="#000000" />
 
     <ImageView
         android:id="@+id/saveBottom"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
         android:layout_weight="50"
+        android:background="#000000"
         android:contentDescription="@string/describe_restore_buoy"
         android:gravity="center"
         android:src="@drawable/whitebuoy" />
