--- a/res/layout-land/restore.xml
+++ b/res/layout-land/restore.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- This is the HORIZONTAL version -->
-<LinearLayout android:id="@+id/restoring"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	<ImageView android:layout_weight="50" android:layout_height="fill_parent"
-        android:contentDescription="@string/describe_save_buoy"
-		android:layout_width="0dip" android:src="@drawable/whitebuoy"
-		android:id="@+id/restoreBottom" />
-	<WebView android:id="@+id/restoreData" android:layout_weight="50"
-		android:layout_height="fill_parent" android:layout_width="0dip" />
-</LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/restoring"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#000000"
+    android:orientation="horizontal" >
 
+    <ImageView
+        android:id="@+id/restoreBottom"
+        android:layout_width="0dip"
+        android:layout_height="fill_parent"
+        android:layout_weight="50"
+        android:background="#000000"
+        android:contentDescription="@string/describe_save_buoy"
+        android:src="@drawable/whitebuoy" />
+
+    <WebView
+        android:id="@+id/restoreData"
+        android:layout_width="0dip"
+        android:layout_height="fill_parent"
+        android:layout_weight="50"
+        android:background="#000000" />
+
+</LinearLayout>
